syntax = "proto3";
option java_multiple_files = true;
import "temporary_exposure_key_export.proto";
package SAP;

message SubmissionPayload {
  repeated SAP.TemporaryExposureKey keys = 1;
  // The ISO 3166 3 letter country code for each key
  repeated string visitedCountries = 2;
  optional bytes requestPadding = 3;
  optional string origin = 4;
  optional bool consentToFederation = 5;
}